<resources>
    <string name="app_name">FAssign</string>
    <string name="splashimage">Image when app starts</string>
    <string name="pictures_on_the_top_application">Pictures on the top application</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="story">Story</string>
    <string name="welcome_to">Welcome to</string>
    <string name="welcome_to_description">Text above title\n</string>
    <string name="story_description">title half</string>
    <string name="time">Time</string>
    <string name="or">or</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Back</string>
    <string name="lastnameenter">Enter Your Last Name</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="dob">Date of Birth</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="confirmemail">Confirmed Email</string>
    <string name="confirmpassword">Confirmed Password</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>

    <string name="addprofilepic">Add a Profile Picture</string>
    <string name="uploadpic">Upload Button</string>
    <string name="changepw">Change Password</string>
    <string name="editpfp">Edit Profile</string>
    <string name="examplename">John Doe</string>
    <string name="deleteacc">Delete Account</string>
    <string name="description">Your Story Description</string>
    <string name="storytitle">Title</string>
    <string name="addpic">Add Pictures for the Story</string>
    <string name="Content">Your Story of content goes here</string>
    <string name="email">Change Email</string>
    <string name="savechanges">Save Changes</string>
    <string name="editinfo">Edit Information</string>
    <string name="warnings">Are you sure you wanted to Delete it?</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="me">Me</string>
    <string name="logout">Log out</string>


</resources>