<!-- Welcome activity layout -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/WholescreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundgray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imagelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="500dp"
        android:accessibilityTraversalAfter="@id/loginButton"
        android:background="@drawable/banner_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView

            android:id="@+id/imagebanner"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/applogo"
            android:contentDescription="@string/pictures_on_the_top_application"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/welcometext"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintTop_toBottomOf="@+id/imagelayout"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:contentDescription="@string/welcome_to_description"
            android:text="@string/welcome_to"
            android:textSize="24sp"
            android:textStyle="bold"
            android:translationX="150dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:contentDescription="@string/story_description"
            android:text="@string/story"
            android:textAlignment="textEnd"
            android:textSize="35sp"
            android:textStyle="bold"
            android:translationX="65dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:contentDescription="@string/story_description"
            android:text="@string/time"
            android:textAlignment="textStart"
            android:textColor="@color/splash"
            android:textSize="35sp"
            android:textStyle="bold"
            android:translationX="225dp"
            android:translationY="-70dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagelayout">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/splash"
            android:text="@string/login"
            android:textColor="@color/white"
            app:rippleColor="@color/lightersplash"
            app:strokeColor="@color/splash" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <!-- Left line -->
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:translationY="10dp" />

            <!-- 'or' text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/or"
                android:textColor="@color/black" />

            <!-- Right line -->
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:translationY="10dp" />
        </LinearLayout>


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightersplash"
            android:text="@string/sign_up"
            app:rippleColor="@color/splash" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
