<!-- Welcome activity layout -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/WholescreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundgray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imagelayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="700dp"
        android:accessibilityTraversalAfter="@id/loginButton"
        android:background="@drawable/banner_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/button_topleft"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginEnd="334dp"
            android:layout_weight="20d"
            android:adjustViewBounds="true"
            android:backgroundTint="@color/splash"
            android:contentDescription="@string/back"
            android:padding="10dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02"
            app:srcCompat="@drawable/ic_back_arrow" />

        <ImageView

            android:id="@+id/imagebanner"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/applogo"
            android:contentDescription="@string/pictures_on_the_top_application"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginbanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="235dp"
        android:layout_marginBottom="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagelayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="27sp"
            android:textStyle="bold"
            android:translationX="45dp"
            android:translationY="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signinfield"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="75dp"
        android:accessibilityTraversalAfter="@id/loginButton"
        android:background="@drawable/loginflags"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Email EditText -->
        <EditText
            android:id="@+id/firstnameenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/lastname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints=""
            />

        <!-- Password EditText -->

        <EditText
            android:id="@+id/lastnameenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/firstname"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/firstnameenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="175dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/dob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/nextbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#019B88"
        android:drawableTint="#019B88"
        android:text="@string/next"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinfield"
        tools:layout_editor_absoluteX="161dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
